# Win10_Screenshotting

./: .gitignore  CMakeLists.txt  README.md  main.cpp
